--- a/main.css
+++ b/main.css
@@ -1,21 +1,58 @@
 h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: auto;
+    margin: 5px;
 }
 
 h2 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: italic;
     font-size: 18px;
 }
 
-body {
+html {
     background-color:#f5f5f5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .header {
     text-align: center;
-    margin: 60px;
+    margin: 30px 10px;
+}
+
+nav {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+}
+.navbar {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;  
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: #333;
+    width: 100%;
+}
+
+.navbar li {
+    float: left;
+    flex-grow: 1;
+}
+
+.navlink {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navlink:hover {
+    background-color: #111;
+  }
+
+.active {
+    background-color: #16d7f5;
 }
 
 .section {
@@ -23,7 +60,6 @@ body {
 }
 
 p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-left: 15px;
 }
 
@@ -32,4 +68,14 @@ p {
     float: left;
     box-shadow: 0px 4px 8px gray;
     margin-right: 15px
+}
+
+ul li {
+    list-style-type: none;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+ul ul li {
+    list-style-type: disc;
 }
